# fortunate-primes

./: .editorconfig  .gitignore  .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  README.md.old  SYSTEM_PROMPT.md  compare_implementations.sh  test_pari.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: adaptive-batch-sizing.md  nodejs-implementation.md  python-implementation.md
archived/: DEVELOPMENT.md  Makefile  README.md  benchmark.sh  benchmark_pari.gp
archived/docs/: hybrid_performance.md
archived/src/: lib.rs  main.rs  primes.rs  wheel.rs
benchmarks/: README.md
benchmarks/results/: fortunate_4601-5000_analysis.md  fortunate_4601-5000_data.csv  fortunate_F4601-F4610.txt
docs/: b005235.txt
examples/: hybrid_example.rs
implementations/: README.md
implementations/node-ts/: README.md
implementations/pari-gp/: BENCHMARKS.md  README.md  benchmark.sh  fortunate-seq.gp  fortunate.gp  search_primorial_twins.gp  search_primorial_twins_oeis_optimized.gp
implementations/python-gmpy2/: ANOMALY_F4601_HARD_COMPOSITE.md  BENCHMARKS.md  CASE_STUDY_F1500.md  CRIU_SETUP.md  README.md  batch-compute.sh  checkpoint-process.sh  expedition_4610.md  expedition_4627.md  expedition_4632.md  expedition_4635_4637.md  expedition_4639.md  expedition_5000.md  expedition_700-750.md  expedition_checkpoint.json  fabricate_checkpoint.py  (+15 more)
results/: fortunate_4601-5000_analysis.md  fortunate_4601-5000_data.csv
src/: hybrid.rs  lib.rs  main.rs  pari.rs  primality.rs  primes.rs  progress.rs  search.rs  sieve.rs  wheel.rs
(+16 files in other folders)
