[package]
name = "fortunate-primes"
version = "0.4.3"
edition = "2021"

[dependencies]
rug = { version = "1.24", features = ["serde"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "fortunate_primes"
path = "src/lib.rs"

[[bin]]
name = "fortunate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
